height fix on show more button mobile

--- a/src/css/_uxSuite.scss
+++ b/src/css/_uxSuite.scss
@@ -128,6 +128,7 @@ $ux-dark: #222;
 .gv-button-wrapper{
     position:relative;
     width: 100%;
+    height: 54px;
     margin: 0 10px 12px;
 }
 
